; ModuleID = '/home/carl/AnghaBench/sway/swaybar/tray/extr_item.c_set_sni_dirty.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/tray/extr_item.c_set_sni_dirty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swaybar_sni = type { %struct.TYPE_2__*, i64, i64, i64 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.swaybar_sni*)* @set_sni_dirty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_sni_dirty(%struct.swaybar_sni* %0) #0 {
  %2 = alloca %struct.swaybar_sni*, align 8
  store %struct.swaybar_sni* %0, %struct.swaybar_sni** %2, align 8
  %3 = load %struct.swaybar_sni*, %struct.swaybar_sni** %2, align 8
  %4 = call i64 @sni_ready(%struct.swaybar_sni* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %19

6:                                                ; preds = %1
  %7 = load %struct.swaybar_sni*, %struct.swaybar_sni** %2, align 8
  %8 = getelementptr inbounds %struct.swaybar_sni, %struct.swaybar_sni* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = load %struct.swaybar_sni*, %struct.swaybar_sni** %2, align 8
  %10 = getelementptr inbounds %struct.swaybar_sni, %struct.swaybar_sni* %9, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = load %struct.swaybar_sni*, %struct.swaybar_sni** %2, align 8
  %12 = getelementptr inbounds %struct.swaybar_sni, %struct.swaybar_sni* %11, i32 0, i32 3
  store i64 0, i64* %12, align 8
  %13 = load %struct.swaybar_sni*, %struct.swaybar_sni** %2, align 8
  %14 = getelementptr inbounds %struct.swaybar_sni, %struct.swaybar_sni* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @set_bar_dirty(i32 %17)
  br label %19

19:                                               ; preds = %6, %1
  ret void
}

declare dso_local i64 @sni_ready(%struct.swaybar_sni*) #1

declare dso_local i32 @set_bar_dirty(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
